--- a/css/style.css
+++ b/css/style.css
@@ -25,9 +25,9 @@ body {
   display: flex;
   flex-wrap: wrap;
   background: url(../images/bg-pattern-desktop.svg) no-repeat;
-
   box-shadow: 1px 2px 10px 0px rgba(45, 45, 45, 0.5);
   margin-top: 50px;
+  margin: 0 auto;
 }
 
 /*Header*/
@@ -57,7 +57,7 @@ body {
   padding-left: 200px;
   align-items: flex-start;
   flex-wrap: wrap;
-  
+
 }
 
 .intro {
@@ -120,7 +120,6 @@ body {
   border-style: none; 
   background: var(--redGradient);
   color: rgba(255, 255, 255, 0.784); 
-  
   border-radius: 25px 25px 25px 25px;
   box-shadow: 1px 2px 10px 0px rgba(45, 45, 45, 0.5);
   cursor: pointer;
